# cmangos-api

./: .gitignore  .gitmodules  Cargo.toml  build.rs
.github/workflows/: rust.yml
src/: cmangos.cc  main.rs
